--- a/RestoStock/appsettings.json
+++ b/RestoStock/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "Supermarket": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Supermarket;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+
   "AllowedHosts": "*"
 }
